# SOBE_YTNK

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  create_test_user.py  docker-compose.yml  init.sql  main.py  parsed_resume_data_format.txt  pyproject.toml  requirements.txt
backend/api/: api_dependencies.py
backend/api/routers/: applicant_router.py  application_router.py  auth_router.py  job_router.py  ranking_router.py
backend/app/: main.py
backend/app/api/: api_dependencies.py  dependencies.py
backend/app/core/: config.py  security.py
backend/app/crud/: applicant_crud.py  applicants.py  application_crud.py  applications.py  job_crud.py  jobs.py  user_crud.py  users.py
backend/app/database/: base.py  session.py
backend/app/models/: applicant_model.py  applicants.py  application_model.py  job_model.py  (+4 more)
backend/core/: config.py  security.py
backend/crud/: applicant_crud.py  application_crud.py  job_crud.py  user_crud.py
backend/database/: base.py  session.py
backend/models/: applicant_model.py  application_model.py  education_history_model.py  job_model.py  user_model.py  work_experience_model.py
backend/schemas/: applicant_schema.py  application_schema.py  education_history_schema.py  enum_schema.py  job_schema.py  token_schema.py  user_schema.py  work_experience_schema.py
backend/services/: application_ranking_service.py  application_recalculation_service.py  auth_service.py  dummy_application_generator.py  resume_parsing_service.py  resume_text_extraction_service.py
(+59 files in other folders)
