[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Emin-ACIKGOZ",email = "eminsalihacikgoz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "fastapi[all] (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "tk (>=0.1.0,<0.2.0)",
    "json-repair (>=0.50.1,<0.51.0)",
    "requests (>=2.32.5,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
